--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="staticpage_4608.html">
-																	<img src="images/staticpage.png " />
+																	<img src="icon(93).png" />
 															</a>
 						</td>
 						<td>
 							<a href="staticpage_4608.html" rel="external" data-ajax="flase" >
-								<label>StaticPage</label>
+								<label>I want a better relaionship with my man!</label>
 							</a>
 						</td>
 					</tr>
