--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@ img {
 						<td>
 						
 							<a class="item link" rel="external" data-ajax="flase" href="staticpage_4609.html">
-																	<img src="images/staticpage.png " />
+																	<img src="icon(94).png" />
 															</a>
 						</td>
 						<td>
 							<a href="staticpage_4609.html" rel="external" data-ajax="flase" >
-								<label>StaticPage</label>
+								<label>I Want A Better Relaionship With My Woman!</label>
 							</a>
 						</td>
 					</tr>
