--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ img {
 						</td>
 						<td>
 							<a href="staticpage_4608.html" rel="external" data-ajax="flase" >
-								<label>I want a better relaionship with my man!</label>
+								<label>I want a better relationship with my man!</label>
 							</a>
 						</td>
 					</tr>
@@ -121,7 +121,7 @@ img {
 						</td>
 						<td>
 							<a href="staticpage_4609.html" rel="external" data-ajax="flase" >
-								<label>I Want A Better Relaionship With My Woman!</label>
+								<label>I want a better relationship with my woman!</label>
 							</a>
 						</td>
 					</tr>
