--- a/staticpage_4608_9101.html
+++ b/staticpage_4608_9101.html
@@ -22,6 +22,8 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
+<!--ThemeSettingSubpage-->
+
 <!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
@@ -70,9 +72,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>I want a better relationship with my man!</h1>
+    <h1>Advice for week 1</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -82,20 +84,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4608_9101.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                Advice for week 1                </h2>
-                <p>7 things your man is good at?</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  ADVICE #1<br>Think of 7 compliments that you could throw your man's way every day for a week. You can do this by phone, sms, email or in person but it will work best in person and if you compliment him straight after he has done it or shown you what you want to compliment. Now watch your man start to light up with more smiles than you could handle.<br><br>HINTS &amp; TIPS:<br>If you can't think of 7 things your man is good at then try 3 things over 3 days or even better think of 1 or 2 extra things that you would like him to be good at and try the following but only once or twice during any 7 day period unless he is naturally a good helper, it would go something like this, "Honey, could you please put the garbage out for me? You are soooooo manly/sexy when you lift those bags with your strong arms." or maybe, "Babe, I am feeling a bit sore tonight around the neck, could you please give me a massage 'cause you are soooooo amazing with those hands of yours."<br>
+
+  </div>
 
   
 
