--- a/more.html
+++ b/more.html
@@ -107,7 +107,7 @@
 						</td>
 						<td>
 							<a href="staticpage_4608.html" rel="external" data-ajax="flase" >
-								<label>I want a better relaionship with my man!</label>
+								<label>I want a better relationship with my man!</label>
 							</a>
 						</td>
 					</tr>
@@ -129,7 +129,7 @@
 						</td>
 						<td>
 							<a href="staticpage_4609.html" rel="external" data-ajax="flase" >
-								<label>I Want A Better Relaionship With My Woman!</label>
+								<label>I want a better relationship with my woman!</label>
 							</a>
 						</td>
 					</tr>
@@ -149,7 +149,7 @@
 
             <style> .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; width: 60px!important;}		.nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }#tab1 .ui-icon { background:  url("icons_tech_1579.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab2 .ui-icon { background:  url("icons_communication_1092.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab3 .ui-icon { background:  url("64Px_-_504-11.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab4 .ui-icon { background:  url("64Px_-_504-210.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab5 .ui-icon { background:  url("more.png") 50% 50% no-repeat; background-size: 30px 30px; }</style>
 
-            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_4608.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4608.html" class="" onclick="window.open('staticpage_4608.html','_self', 'location=yes')">I want a better relaionship with my man!</a></li><li><a href="staticpage_4609.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4609.html" class="" onclick="window.open('staticpage_4609.html','_self', 'location=yes')">I Want A Better Relaionship With My Woman!</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
+            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_4608.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4608.html" class="" onclick="window.open('staticpage_4608.html','_self', 'location=yes')">I want a better relationship with my man!</a></li><li><a href="staticpage_4609.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4609.html" class="" onclick="window.open('staticpage_4609.html','_self', 'location=yes')">I want a better relationship with my woman!</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
 
         </div>	
 
