--- a/staticpage_4608.html
+++ b/staticpage_4608.html
@@ -87,7 +87,7 @@ img {
 	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4608_9101.html">
                                 	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
                                 <h2>
-                Advice for week 1                </h2>
+                WEEK 1                </h2>
                 <p>7 things your man is good at?</p>
                 
             </a></li>
